syntax = "proto3";

package reservation;

option java_multiple_files = true;
option java_package = "com.devoops.user.grpc.proto.reservation";

service ReservationInternalService {
  rpc CheckReservationsExist(CheckReservationsExistRequest) returns (CheckReservationsExistResponse);
  rpc CheckGuestCanBeDeleted(CheckGuestDeletionRequest) returns (CheckDeletionResponse);
  rpc CheckHostCanBeDeleted(CheckHostDeletionRequest) returns (CheckDeletionResponse);
}

message CheckReservationsExistRequest {
  string accommodation_id = 1;
  string start_date = 2;
  string end_date = 3;
}

message CheckReservationsExistResponse {
  bool has_reservations = 1;
}

message CheckGuestDeletionRequest {
  string guest_id = 1;
}

message CheckHostDeletionRequest {
  string host_id = 1;
}

message CheckDeletionResponse {
  bool can_be_deleted = 1;
  string reason = 2;
  int32 active_reservation_count = 3;
}
